test/spec_vectors/exports/ok/module_51.wat
(module (table $a (export "a") 0 funcref))