test/spec_vectors/exports/fail/module_59.wat
(module (export "a" (table 0)))